[package]
name = "uhu-wattou"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
poise = "0.6.1"
time = { version = "0.3.43", features = ["parsing", "macros", "local-offset"] }
ics = "0.5.8"
uuid = { version = "1.18.1", features = ["v4"] }
once_cell = "1.21.3"
thiserror = "2.0.17"
bitflags = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
color-eyre = "0.6.5"
